make sure checkbox labels are selectable in registration, scale on firefox as it doesn't follow height like edge/chrome

--- a/web/nwrsc/static/scss/common.scss
+++ b/web/nwrsc/static/scss/common.scss
@@ -81,6 +81,7 @@ form {
 
         input[type=checkbox] {
             flex: 0 0 2rem;
+            -moz-transform: scale(1.6);
         }
 
         textarea {
